<resources>
    <string name="app_name">Antiplanner</string>
    <string name="home">to do</string>
    <string name="add">add</string>
    <string name="events">events</string>
    <string name="user">me</string>
    <string name="login">Log in</string>
    <string name="ya_login">Log in via Yandex ID</string>
    <string name="save">SAVE</string>
    <string name="new_todo">What needs to be done…</string>
    <string name="priority">Priority</string>
    <string name="deadline">Dealine</string>
    <string name="low_priority">Low</string>
    <string name="normal_priority">Common</string>
    <string name="high_priority">!!High</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="toolbar_subtitle">Done — %1$d</string>
    <string name="title">To do</string>
    <string name="delete_error">Could not delete the todo</string>
    <string name="save_error">Could not save the todo</string>
    <string name="get_error">Could not get the todo</string>
    <string name="update_error">Could not update the todo</string>
    <string name="no_internet_error">There is no Internet connection</string>
    <string name="network_error">Something went wrong!</string>
    <string name="retry">Retry</string>
    <string name="notification_low_priority">Priority: Low</string>
    <string name="notification_normal_priority">Priority: Common</string>
    <string name="notification_high_priority">Priority: High</string>
    <string name="reject_permissions">Give permission</string>
    <string name="without_notification">Continue without notifications</string>
    <string name="request_permissions">To notify about deadlines, you need to give a permission</string>
    <string name="notification_deadline_postpone_button">Put aside</string>
    <string name="notification_deadline_postpone_title">Rescheduling the deadline</string>
    <string name="notification_deadline_postpone_text">We are moving the task forward a day. A new notification will arrive in 24 hours</string>
    <string name="notification_deadline_postpone_error_title">Could not reschedule the deadline</string>
    <string name="notification_deadline_postpone_error_text">Click on the notification to try again</string>
    <string name="notification_deadline_channel_name">Todos deadlines</string>
    <string name="hint_log_in">Log in via Yandex ID or\nuse a guest account</string>
    <string name="welcome">Welcome!</string>
</resources>