<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ludwiglarsson.antiplanner.fragments.LoginFragment"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_"
        app:layout_constraintVertical_bias="0.25"
        android:layout_marginHorizontal="30dp"
        android:text="@string/welcome"
        />
    <TextView
        android:id="@+id/title_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/hint_log_in"
        android:layout_marginStart="30dp"
        android:paddingTop="3dp"
        android:layout_marginBottom="40dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="40dp"
        android:background="@drawable/transparent_corners"
        app:layout_constraintVertical_bias="0.6"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/or"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/corners"
            android:text="@string/login"
            />
        <ImageView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="20dp"
            android:src="@drawable/or"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_yandex_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ya_button"
            android:text="@string/ya_login"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>